[tool.poetry]
name = "api-hub"
version = "0.1.0"
description = "external p2p schedule api hub"
authors = ["neckchi <neck.chi@kuehne-nagel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
cryptography="41.0.1"
fastapi="0.111.0"
httpx="0.27.0"
orjson="3.10.3"
pydantic="2.7.1"
pydantic_settings="2.2.1"
PyJWT="2.8.0"
PyYAML="6.0.1"
redis="5.0.4"
starlette="0.37.2"
uvicorn="0.29.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
