[tool.poetry]
name = "api-hub"
version = "0.1.0"
description = "external p2p schedule api hub"
authors = ["neckchi <neck.chi@kuehne-nagel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
cryptography = "43.0.1"
fastapi = "0.115.0"
aiohttp = "3.10.10"
orjson = "3.10.7"
pydantic = "2.9.2"
pydantic_settings = "2.3.4"
PyJWT = "2.8.0"
pytest = "8.2.0"
PyYAML = "6.0.1"
redis = "5.0.4"
starlette = "0.41.1"
uvicorn = "0.31.1"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
